2005-08-22  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c (__rt_bind_helper): As a special exception
	for the binding op, force TM_NONBLOCK for unblockable contexts.

	* skins/rtdm: Merge RTDM patch level #10 and #11.

2005-08-22  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* skins/rtdm/proc (proc_read_open_fildes): Don't uselessly copy
	the fildes struct while iterating.

2005-08-21  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Display kernel EXTRAVERSION.

	* skins/rtdm: Merge RTDM patch level #9.

	* CREDITS: Add.

	* arch/ppc/patches: Upgrade to Adeos/ppc r8c2.

2005-08-21  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* nucleus/pod.c (xnpod_schedule, xnpod_schedule_runnable): Avoid
	calling xnpod_current_sched after each context switch.

2005-08-20  Philippe Gerum  <rpm@xenomai.org>

	* arch/i386/patches: Upgrade to r13c1.

	* scripts/rtai-config.in: Add --symbol-dir.

	* include/nucleus/asm-i386/syscall.h: Simplify the configuration
	by removing the adaptive VSYSCALL support: this made little sense,
	since RT users will/must know which capabilities their respective
	targets have. Replace all the hairy VSYSCALL-related switches by a
	single SEP-related one: i.e., either one activates SEP and has
	NPTL, or disables them. No middle choice anymore.

	* skins/posix/syscall.c: Set __pthread_setschedparam as
	conforming.

	* fusion: Following Jan's proposal, export module symbols to a
	central repository, and get rid of the former ugly hack
	circumventing the Kbuild warnings in the same move.

2005-08-19  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/syscall.c: Make all *bind() calls conforming, so that
	we do not attempt to switch the caller to primary mode if it
	happens to be a unshadowed thread, but we do so otherwise.

	* skins/posix/syscall.c (__pthread_setschedparam): Automatically
	shadow the calling thread when applicable.

	* testsuite/latency/latency.c (main): Fix overflow for periods > 2
	ms (period_ns).
